created ClubInterface + changed file structure of /services